- Implemented ndhist's clear() method, that sets all bin content values to zero.
  If the ndhist object is a view, only the bins visible by the view are set to
  zero. This allows selective clearing.

- Renamed the rebin and rebin_axis method into merge_bins and merge_axis_bins,
  because that's what it is actually doing.
  It might be possible to implement an actual rebin method in the future, when
  the ndhist object would have a data source assigned for refilling the
  histogram.

- Implemented unit test for ndhist's rebin_axis method for 2D histograms.

- Implemented the rebin method of the ndhist class, that can take bp::tuple
  (or std::vector<intptr_t>) objects for the axis and nbins_to_merge arguments
  in order to operate on several axes.

- Introduced the copy=True kwarg to ndhist's rebin_axis method. If set to
  ``True``, a deepcopy of the ndhist object is created first and the rebin
  operation is performed on that copy. The default is ``True`` in order to have
  by default the same behaviour as dashi's rebin_axis method.

- Zero bins, that would be discarded by ndhist's rebin_axis method when the axis
  is extendable and the nbins_to_merge is not a true divisor of the number of
  bins of the axis. Otherwise such bins would have a pre-set value when the axis
  gets extended after the rebin operation.

- Implemented the ndhist rebin_axis(axis, nbins_to_merge) method that changes
  the current ndhist object, if the current ndhist object is not a view. If it
  is a view, a deep copy is created first.
  The rebin_axis method returns a reference to the changed ndhist object.

  The reason for letting rebin_axis operate on the ndhist object itself is the
  fact, that this operation can be done very efficiently without the need of
  a copy of all the data. In principle rebin_axis could take a kwarg named
  copy=True, that would call the deepcopy() method first if needed. This would
  mimic the behavior of dashi, that always creates a copy when rebinning.